update for 2023 version

--- a/main.tex
+++ b/main.tex
@@ -60,7 +60,7 @@
 	\vspace{0.7cm}
 	{\small Adrien Llave}
 
-	\footnotesize novembre 2022
+	\footnotesize novembre 2023
 \end{frame}
 \end{withoutfootline}
 \end{withoutheadline}
@@ -72,6 +72,33 @@
 \end{frame}
 \end{withoutheadline}
 
+
+\begin{frame}{Objectifs} %-----------------------------------------------------
+\begin{center}
+
+    \begin{itemize}
+        \item Prendre connaissance des dernières évolutions de la recherche
+        \item Esquisser les applications en développement
+        \item Qu'est-ce qu'une question scientifique ?
+
+    \end{itemize}
+\end{center}
+\end{frame}
+
+\begin{frame}{D'où je parle} %-----------------------------------------------------
+\begin{center}
+
+    \begin{itemize}
+        \item 2010 - 2012 : IUT GEII
+        \item 2012 - 2015 : Master métiers du son à l'ENS Louis-Lumière
+        \item 2015 - 2016 : Master traitement du signal à Grenoble-INP Phelma
+        \item 2017 - 2022 : Doctorat traitement du signal à CentraleSupélec
+        \item 2022 - 2023 : Chercheur à Orange
+        \item 		 2023 : Enseignement à l'IUT, recherche au LTSI
+        \item 2024 -      : Chercheur à Orange
+    \end{itemize}
+\end{center}
+\end{frame}
 
 %==================================================================================================
 %==================================================================================================
@@ -618,6 +645,7 @@ Challenges :
 		\begin{itemize}
 			\item ENST-Drums : 3h de batterie (8 pistes)
 			\item MedleyDB : 196 chansons, $\sim$7h \cite{bittner_medleydb_2014}
+			\item CoSoD : 331 chansons \cite{duguay_collaborative_2023}
 		\end{itemize}
 		\item réemploi d'autres base de données (séparation de sources musicales)
 		\begin{itemize}
@@ -638,7 +666,7 @@ Challenges :
 \begin{frame}{Différents niveaux d'interactions} %-----------------------------------------------------
 \begin{columns}
     \begin{column}{0.48\textwidth}
-		Différentes applications :
+		Différentes applications \footnote{enquête socio des usages \cite{vanka_adoption_2023}}:
 		\begin{itemize}
 			\item aide à la décision/préprocessing vs. full automatic (personne devant la console)
 			\item amateur vs. pro
@@ -731,6 +759,7 @@ Avantage : interprétable et adaptable
 			\item description qualitative (textuelle) du mix.
 			\item description quantitative (numérique) du mix.
 			\item analyse du niveau de reverb. et de son impact sur chaque piste dans le mix. \cite{de_man_perceptual_2017}
+			\item analyse de mix. (graphe d'effets) \cite{lee_blind_2023}
 		\end{itemize}
     \end{column}
     \begin{column}{0.48\textwidth}
